# sonica

./: .gitignore  README.md  docker-compose.yml  env.example
audio-engine/: Cargo.toml  Dockerfile  wasm-pack.toml
audio-engine/migrations/: 001_initial_schema.sql
audio-engine/src/: advanced_fingerprint.rs  audio.rs  config.rs  database.rs  error.rs  fingerprint.rs  lib.rs  optimized_fingerprint.rs  similarity.rs  vector_db.rs  wasm.rs
backend/: Cargo.toml  Dockerfile  main.py  requirements.txt
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: recognition.py
backend/app/core/: auth.py  config.py  exceptions.py
backend/app/services/: recognition_service.py  vector_service.py
backend/src/: main.rs
backend/src/models/: mod.rs
backend/src/utils/: config.rs  mod.rs
database/: schema.sql
docs/: API-Specification.md  Advanced-Recognition-Algorithms.md  Implementation-Plan.md  Implementation-Status.md  Lovable-Frontend-Prompt.md  PRD.md  Performance-Benchmarks.md  Technical-Architecture.md  Vector-Database-Setup.md
frontend/src/components/: AudioVisualizer.tsx
frontend/src/lib/: audioProcessor.ts  store.ts
frontend/src/pages/: Recognize.tsx
infrastructure/nginx/: nginx.conf
infrastructure/prometheus/: prometheus.yml
scripts/: build-wasm.sh  dev.sh  setup-vector-db.sh  setup.sh  test-advanced-fingerprint.py
