[package]
name = "sonica"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-multipart = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
futures-util = "0.3"

# Audio processing dependencies (simplified for initial build)
hound = "3.5"

# HTTP client for external APIs
reqwest = { version = "0.11", features = ["json"] }

# Configuration and validation
config = "0.14"
validator = { version = "0.18", features = ["derive"] }
